Fix a layout issue on the progress bar in two-line controls pane on IE

--- a/css/music-controls.css
+++ b/css/music-controls.css
@@ -293,7 +293,7 @@ body:not(.snapjs-left) #controls.taller-header {
 	left: 270px;
 	right: 20px;
 	top: 60px;
-	max-width: unset;
+	max-width: 100%;
 }
 
 #controls.two-line .progress-info .progress-text {
